Fixed compile issue

--- a/TeamTap/teamtap-Info.plist
+++ b/TeamTap/teamtap-Info.plist
@@ -38,6 +38,8 @@
 		<string>OpenSans-regular.ttf</string>
 		<string>OpenSans-Semibold.ttf</string>
 	</array>
+	<key>UILaunchStoryboardName</key>
+	<string>Launch Screen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
